--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>This is the first code</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Sample Page</title>
+</head>
+
+<body>
+
+  <h1>This is a sample HTML Page</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo odit culpa eius, reprehenderit error tenetur quo, corrupti doloribus quibusdam molestias impedit, rerum quia laboriosam. Autem ut laborum numquam quo quasi!</p>
+  
+</body>
+
+</html>
