adding an image

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sample Page</title>
+  <title>Home Page</title>
 </head>
 
 <body>
 
-  <h1>This is a sample HTML Page</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo odit culpa eius, reprehenderit error tenetur quo, corrupti doloribus quibusdam molestias impedit, rerum quia laboriosam. Autem ut laborum numquam quo quasi!</p>
-  
+  <h1>Welcome to my Awesome Page</h1>
+  <p>In this page, you can see my favorite image below</p>
+  <img src="/images/pingin-nikah.jpg" alt="Pingin Nikah">
+
 </body>
 
 </html>
