--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <p>In this page, you can see my favorite image below</p>
   <img src="/images/pingin-nikah.jpg" alt="Pingin Nikah">
 
+  <p>You can also listen to the my favorite song :</p>
+  <audio controls>
+    <source src="audio/Epicness Full Version.wav" type="audio/mpeg">    
+  </audio>
+
 </body>
 
 </html>
