--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <audio controls>
     <source src="audio/Epicness Full Version.wav" type="audio/mpeg">    
   </audio>
+  <p>You maybe want to watching this video</p>
+    <video controls>
+      <source src="video/Al-Fatihah.mp4" type="video/mp4">
+    </video>
 
 </body>
 
