--- a/index.html
+++ b/index.html
@@ -5,27 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Headings Tag</title>
+  <title>List</title>
 </head>
 
 <body>
+  <p>Berikut ini adalah beberapa hewan kesayangan saya: 
+    <ul>
+      <li>Kucing</li>
+      <li>Ayam</li>
+      <li>Burung</li>
+      <li>Kelinci</li>
+    </ul>
+  </p>
 
-    <h1>Subject Heading</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga id aliquid expedita sed voluptatum? Natus pariatur, id cumque illum, sint ratione asperiores nemo saepe magni quo voluptates commodi non rem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit velit nam temporibus dicta nemo minus perferendis, inventore animi. Aspernatur dolorem laborum optio culpa commodi cumque nemo quasi est suscipit ab. </p>
-    
-    <h2>Key Point</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quasi quaerat inventore, iure nam ab rerum repudiandae delectus sit, porro cumque sequi laudantium aut sint earum laborum exercitationem, ducimus illo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis atque minima ea sapiente, maxime non amet iure unde asperiores nam minus, architecto nisi officiis molestias delectus numquam velit placeat voluptatum?</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam perspiciatis architecto temporibus eius unde neque quae, eaque rem expedita ipsum, culpa ratione minus praesentium sed inventore! Aspernatur repudiandae quae dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur sapiente quibusdam perferendis aut. Praesentium sed est, natus voluptates dolorum laboriosam repellendus rem quisquam, excepturi aut perferendis facere suscipit nam odit!</p>
+  <p>Berikut ini adalah beberapa nama-nama kota besar di Indonesia: 
+    <ol>
+      <li>Jakarta</li>
+      <li>Bandung</li>
+      <li>Surabaya</li>
+      <li>Aceh</li>
+      <li>Denpasar</li>
+      <li>dll</li>
+    </ol>    
+  </p>
 
-    <h3>Minor Point</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsa pariatur voluptate fugit praesentium. Nam necessitatibus, possimus tenetur soluta maxime quam vitae dolor corporis provident, aspernatur incidunt nobis architecto quibusdam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta tempore eaque temporibus laudantium doloremque non, provident error ratione dolor nemo, delectus animi voluptatum assumenda, debitis illo voluptas! Odio, autem odit!</p>
-
-    <h4>Very Minor Point</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae minus eum vitae eos repellendus numquam ratione iusto molestias. Ex perspiciatis ipsum id adipisci expedita iusto voluptas odit repellat doloribus totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus iusto impedit voluptas sint ut eius dolorem veritatis ipsa nihil maiores quidem consequuntur corrupti cumque, dolorum reiciendis quos laboriosam quisquam ullam?</p>
-    
-    <h2>Key Point</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aspernatur quis eaque hic. Magni unde odio soluta illum tempore exercitationem magnam veritatis perspiciatis inventore similique, nesciunt quibusdam deleniti eius vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ab esse impedit quis totam voluptatibus adipisci commodi, iure error sint. Exercitationem beatae voluptates nihil tenetur placeat corrupti corporis doloremque libero.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quos vitae quia officiis temporibus ipsa minus deleniti reprehenderit totam facere! Molestiae doloribus fuga, itaque atque impedit saepe quia sint praesentium! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim deserunt, quasi blanditiis eaque sapiente, impedit dolorem officia laboriosam aperiam repudiandae, unde ea. Soluta consequuntur quos consectetur et, dolorem labore voluptas.</p>
+  <p>Informasi kegiatan Ramadhan 1939H : 
+    <dl>
+      <dt>Nama Kegiatan</dt>
+      <dd>Kuliah Tujuh Menit Menjelang Berbuka Puasa</dd>
+      <dt>Tempat Kegiatan</dt>
+      <dd>Masjid Jami' Al Madina</dd>
+      <dt>Penceramah</dt>
+      <dd>Ustadz Adi Hidayat</dd>
+      <dd>Ustadz Abdul Somad</dd>
+      <dd>AA Gym</dd>
+    </dl>
+  </p>
 
 </body>
 
