Membuat pantun dengan menambahkan Bold dan Italic

--- a/index.html
+++ b/index.html
@@ -5,43 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>List</title>
+  <title>Pantun</title>
 </head>
 
 <body>
-  <p>Berikut ini adalah beberapa hewan kesayangan saya: 
-    <ul>
-      <li>Kucing</li>
-      <li>Ayam</li>
-      <li>Burung</li>
-      <li>Kelinci</li>
-    </ul>
+  <p>
+    <em>Berakit-rakit</em> ke hulu <br>
+    <em>Berenang-renang</em> ke tepian <br>
+    <strong>Bersakit-sakit</strong> dahulu<br>
+    <strong>Bersenang-senang</strong> kemudian<br>
   </p>
-
-  <p>Berikut ini adalah beberapa nama-nama kota besar di Indonesia: 
-    <ol>
-      <li>Jakarta</li>
-      <li>Bandung</li>
-      <li>Surabaya</li>
-      <li>Aceh</li>
-      <li>Denpasar</li>
-      <li>dll</li>
-    </ol>    
-  </p>
-
-  <p>Informasi kegiatan Ramadhan 1939H : 
-    <dl>
-      <dt>Nama Kegiatan</dt>
-      <dd>Kuliah Tujuh Menit Menjelang Berbuka Puasa</dd>
-      <dt>Tempat Kegiatan</dt>
-      <dd>Masjid Jami' Al Madina</dd>
-      <dt>Penceramah</dt>
-      <dd>Ustadz Adi Hidayat</dd>
-      <dd>Ustadz Abdul Somad</dd>
-      <dd>AA Gym</dd>
-    </dl>
-  </p>
-
 </body>
 
 </html>
