--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <header>
         <h1>My New Website</h1>
         <p>This is the slogan of my website.</p>
+
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
       </header>
       
       <article>
